--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,27 +17,31 @@
         android:layout_height="wrap_content">
 
         <Button
+            android:onClick="onclick"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="폴더생성"
             android:id="@+id/button" />
 
         <Button
+            android:onClick="onclick"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="폴더삭제"
             android:id="@+id/button2" />
 
         <Button
+            android:onClick="onclick"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="파일생성"
             android:id="@+id/button3" />
 
         <Button
+            android:onClick="onclick"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="파일삭제"
+            android:text="파일읽기"
             android:id="@+id/button4" />
     </LinearLayout>
 
