파일 목록 프로그램 추가

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
 
         <Button
             android:onClick="onclick"
+            android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="폴더생성"
@@ -25,6 +26,7 @@
 
         <Button
             android:onClick="onclick"
+            android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="폴더삭제"
@@ -32,6 +34,7 @@
 
         <Button
             android:onClick="onclick"
+            android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="파일생성"
@@ -39,6 +42,7 @@
 
         <Button
             android:onClick="onclick"
+            android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="파일읽기"
@@ -46,7 +50,8 @@
     </LinearLayout>
 
     <Button
-        android:layout_width="wrap_content"
+        android:onClick="onclick"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="파일 목록 가져오기"
         android:id="@+id/button5" />
@@ -55,6 +60,7 @@
         android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/editText" />
+        android:id="@+id/editText"
+        android:background="#f5e3e3" />
 
 </LinearLayout>
